# cpp-mastery

./: .clang-format  .clang-tidy  .cppcheck  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AI_RESUME_CONTEXT.md  CHECKLIST.md  CMakeLists.txt  CODE_QUALITY.md  CODING_GUIDELINES.md  Dockerfile  GIT_WORKFLOW.md  HOW_TO_WORK.md  LINTING_GUIDE.md  Makefile  PROGRESS_TRACKER.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  TDD_TOOLCHAIN.md  TDD_WORKFLOW.md  docker-compose.yml  lint.sh  progress_state.json  setup-dev-env.sh  update_progress.py
data/: context.db-shm  context.db-wal
database/init/: 01-init.sql
dsa-week/: ALL_COMPLETE.md  CMakeLists.txt  EASY_COMPLETE.md  PROBLEMS_DETAILED.md  QUICK_REFERENCE.md  README.md
dsa-week/easy/include/: problems.h
dsa-week/easy/src/: problems.cpp
dsa-week/easy/tests/: test_easy_problems.cpp
dsa-week/hard/include/: problems.h
dsa-week/hard/src/: problems.cpp
dsa-week/hard/tests/: test_hard_problems.cpp
dsa-week/medium/include/: problems.h
dsa-week/medium/src/: problems.cpp
dsa-week/medium/tests/: test_medium_problems.cpp
finance-applications/: README.md
projects/: README.md
quant-interview/: PROBLEMS_GUIDE.md  README.md  TDD_WORKFLOW.md
quant-interview/easy/: CMakeLists.txt
quant-interview/easy/include/: problems.h
quant-interview/easy/src/: problems.cpp
quant-interview/easy/tests/: test_easy_problems.cpp
quant-interview/hard/: CMakeLists.txt
quant-interview/hard/include/: problems.h
quant-interview/hard/src/: problems.cpp
quant-interview/hard/tests/: test_hard_problems.cpp
quant-interview/medium/: CMakeLists.txt
quant-interview/medium/include/: problems.h
quant-interview/medium/src/: problems.cpp
quant-interview/medium/tests/: test_medium_problems.cpp
resources/: README.md
week-1/: CMakeLists.txt  INTERVIEW_QUESTIONS.md  README.md
week-1/banking/tests/: test_banking.cpp
week-1/calculator/: CMakeLists.txt
week-1/calculator/include/: calculator.h  expression_parser.h
week-1/calculator/tests/: test_calculator.cpp  test_expression_parser.cpp
week-1/include/: animal.h  bank_account.h  calculator.h  expression_parser.h  memory_pool.h  shape.h  unique_ptr.h
week-1/projects/: README.md
week-1/src/: animal.cpp  bank_account.cpp  calculator.cpp  expression_parser.cpp  memory_pool.cpp  resource.cpp  shape.cpp
week-1/tests/: test_calculator.cpp  test_day1_calculator.cpp  test_day2_expression_parser.cpp  test_day3_shape_hierarchy.cpp  test_day4_inheritance_polymorphism.cpp  test_day5_banking_system.cpp  test_day6_smart_pointers_raii.cpp  test_day7_memory_pool_integration.cpp  test_memory_pool.cpp  test_smart_pointers.cpp
week-1/theory/: basics.md  memory.md  oop.md
week-2/: CMakeLists.txt  README.md
week-2/bst_iterator/tests/: test_bst_iterator.cpp
week-2/expression_template/tests/: test_expression_template.cpp
week-2/graph_visualizer/tests/: test_graph_visualizer.cpp
week-2/include/: bst.h  containers.h  graph.h  hash_table.h  performance_analyzer.h  simple_iterator.h  stl_benchmark.h  templates.h
week-2/projects/: README.md
week-2/src/: bst_impl.cpp  graph.cpp  hash_table_impl.cpp
week-2/stl_benchmark/tests/: test_stl_benchmark.cpp
week-2/tests/: test_day1_stl_benchmark.cpp  test_day2_stl_algorithms_iterator.cpp  test_day3_function_templates_generic.cpp  test_day4_class_templates_expression.cpp  test_day5_bst_iterators.cpp  test_day6_hash_table_graph.cpp  test_day7_performance_analysis.cpp  test_generic_container.cpp
week-2/theory/: data_structures.md  stl.md
week-3/: CMakeLists.txt  README.md
week-3/include/: algorithms.h  lockfree_queue.h  modern_features.h  patterns.h  simd_ops.h  thread_pool.h  trading_engine.h
week-3/lockfree_structures/tests/: test_lockfree_structures.cpp
week-3/projects/: README.md
week-3/src/: algorithms.cpp  lockfree_queue.cpp  modern_features.cpp  patterns.cpp  simd_ops.cpp  thread_pool.cpp  trading_engine.cpp
week-3/tests/: test_day1_threading_threadpool.cpp  test_day2_sync_lockfree.cpp  test_day3_modern_cpp.cpp  test_day4_design_patterns.cpp  test_day5_optimization_simd.cpp  test_day6_advanced_algorithms.cpp  test_day7_trading_engine.cpp
week-3/theory/: concurrency.md
week-3/thread_pool/tests/: test_thread_pool.cpp
week-4/: CMakeLists.txt  README.md
week-4/http_server/tests/: test_http_server.cpp
week-4/include/: cache.h  http_server.h  microservice.h  monitoring.h  orm.h  portfolio.h  realtime.h
week-4/projects/: README.md
week-4/src/: http_server.cpp  microservice.cpp  monitoring.cpp  orm.cpp  portfolio.cpp  realtime.cpp
week-4/tests/: test_day1_socket_http.cpp  test_day2_database_orm.cpp  test_day3_distributed_cache.cpp  test_day4_microservices.cpp  test_day5_realtime_communication.cpp  test_day6_monitoring.cpp  test_day7_portfolio.cpp
week-4/theory/: networking.md
