cmake_minimum_required(VERSION 3.20)
project(quant_easy CXX)
set(CMAKE_CXX_STANDARD 17)
include(FetchContent)
FetchContent_Declare(googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG release-1.12.1)
FetchContent_MakeAvailable(googletest)
enable_testing()
add_executable(test_easy_problems src/problems.cpp tests/test_easy_problems.cpp)
target_link_libraries(test_easy_problems gtest_main pthread)
add_test(NAME EasyProblems COMMAND test_easy_problems)
