cmake_minimum_required(VERSION 3.20)
project(quant_hard CXX)
set(CMAKE_CXX_STANDARD 17)
include(FetchContent)
FetchContent_Declare(googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG release-1.12.1)
FetchContent_MakeAvailable(googletest)
enable_testing()
add_executable(test_hard_problems src/problems.cpp tests/test_hard_problems.cpp)
target_link_libraries(test_hard_problems gtest_main pthread)
add_test(NAME HardProblems COMMAND test_hard_problems)
